se le agrega navegacion y como mandar info de una actividad a otra

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -21,6 +21,7 @@
     <string name="study">Study</string>
     <string name="dia_de_nacimiento">Birthday</string>
     <string name="fecha">Date</string>
+    <string name="registrar">Register</string>
 
     <string-array name="ciudades_nacimiento">
         <item> Choose a city</item>
